fixed vignette tables

--- a/vignettes/Rraven.Rmd
+++ b/vignettes/Rraven.Rmd
@@ -1,14 +1,14 @@
 ---
-title: "Rraven: Connecting R and Raven Sound Analysis Software"
-author: <a href="http://marceloarayasalas.weebly.com/">Marcelo Araya-Salas</a>
+title: <center><font size="7"><b>Rraven&#58; Connecting R and Raven Sound Analysis Software</b></font></center>
+author: <center><a href="http://marceloarayasalas.weebly.com/">Marcelo Araya-Salas, PhD</a> </center>
  &nbsp; 
-date: "`r Sys.Date()`"
+date:  <center>"`r Sys.Date()`"</center>
 output:
   html_document:
     toc: yes
     toc_float:
-      collapsed: no
-      smooth_scroll: no
+      collapsed: false
+      smooth_scroll: true
 vignette: >
   \usepackage[utf8]{inputenc}
   %\VignetteIndexEntry{Rraven: Connecting R and Raven Sound Analysis Software}
@@ -22,7 +22,10 @@ vignette: >
 library(warbleR)
 library(Rraven)
 library(knitr)
+library(dplyr)
+library(kableExtra)
 
+options(knitr.table.format = "html") 
 opts_chunk$set(comment = "")
 opts_knit$set(root.dir = tempdir())
 options(width = 150, max.print = 100)
@@ -144,10 +147,11 @@ head(rvn.dat)
  #providing the name of the column with the sound file names
 rvn.dat <- imp_raven(all.data = TRUE, path = tempdir())
 
-kable(head(rvn.dat[,1:5]), align = "c", row.names = F)
+knitr::kable(head(rvn.dat[,1:7]), align = "c", row.names = F, escape = FALSE) %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
 
-kable(head(rvn.dat[,6:ncol(rvn.dat)]), align = "c", row.names = F)
-
+knitr::kable(head(rvn.dat[ , 8:ncol(rvn.dat)]), align = "c", row.names = F, escape = FALSE) %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
 ```
  &nbsp; 
  
@@ -165,7 +169,8 @@ head(rvn.dat)
 
 rvn.dat <- imp_raven(all.data = TRUE, path = tempdir(), waveform = TRUE)
 
-kable(head(rvn.dat), format = "html")
+knitr::kable(head(rvn.dat), align = "c", row.names = F, escape = FALSE) %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
 
 ```
  &nbsp; 
@@ -185,8 +190,8 @@ head(rvn.dat)
  #providing the name of the column with the sound file names
 rvn.dat <- imp_raven(sound.file.col = "Begin.File", all.data = FALSE, freq.cols = TRUE)
 
-knitr::kable(head(rvn.dat), align = "c", row.names = FALSE)
-
+knitr::kable(head(rvn.dat), align = "c", row.names = F, escape = FALSE) %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
 ```
  &nbsp; 
  
@@ -210,8 +215,11 @@ rvn.dat.st <- make.selection.table(rvn.dat)
 
 sp <- specan(X = rvn.dat, bp = "frange", wl = 150, pb = FALSE, ovlp = 90)
 
-knitr::kable(head(sp[,1:6]), align = "c", row.names = FALSE)
-knitr::kable(head(sp[,6:15]), align = "c", row.names = FALSE)
+knitr::kable(head(sp[ , 1:8]), align = "c", row.names = F, escape = FALSE) %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
+
+knitr::kable(head(sp[ , 9:15]), align = "c", row.names = F, escape = FALSE) %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
 
 ```
  &nbsp; 
@@ -272,10 +280,12 @@ rvn.dat <- imp_raven(all.data = TRUE)
 # Peak freq contour dif length
 fcts <- extract_ts(X = rvn.dat, ts.column = "Peak.Freq.Contour..Hz.")
  
+knitr::kable(head(fcts[ , 1:14]), align = "c", row.names = F, escape = FALSE) %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
 
-knitr::kable(head(fcts[ ,1:14]), align = "c", row.names = FALSE)
-knitr::kable(head(fcts[ ,39:53]), align = "c", row.names = FALSE)
- 
+knitr::kable(head(fcts[ , 39:53]), align = "c", row.names = F, escape = FALSE) %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
+
 ```
  &nbsp;
  
@@ -298,7 +308,8 @@ head(fcts[,21:32])
 fcts <- extract_ts(X = rvn.dat, ts.column = "Peak.Freq.Contour..Hz.",
  equal.length = TRUE)
 
-knitr::kable(head(fcts[ ,21:32]), align = "c", row.names = FALSE)
+knitr::kable(head(fcts[ , 21:32]), align = "c", row.names = F, escape = FALSE) %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
  
 ```
  &nbsp; 
@@ -322,19 +333,31 @@ knitr::kable(head(fcts), align = "c", row.names = FALSE)
 fcts <- extract_ts(X = rvn.dat, ts.column = "Peak.Freq.Contour..Hz.", 
 equal.length = T, length.out = 10)  
 
-knitr::kable(head(fcts), align = "c", row.names = FALSE)
-
+knitr::kable(head(fcts), align = "c", row.names = F, escape = FALSE) %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
 
 ```
  &nbsp; 
 
 The time series data frame can be directly input into the `dfDTW` [warbleR](https://cran.r-project.org/package=warbleR) function to calculate [Dynamic Time Warping](https://en.wikipedia.org/wiki/Dynamic_time_warping) distances:
 
-```{r}
+```{r, eval=F, echo=T}
 
 dfDTW(ts.df = fcts)
 
 ```
+&nbsp;
+
+```{r, eval=T, echo=F}
+
+knitr::kable(dfDTW(ts.df = fcts)[1:6, 1:6], align = "c", row.names = T, escape = FALSE) %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = T, font_size = 12) %>%
+  row_spec(0, angle = 0)
+
+
+
+```
+<font size="2"><i>* Rows/columns 7 to 11 not shown</i></font>
 
 ---
 
@@ -357,7 +380,9 @@ st1
 st1 <- rvn.dat[ ,1:7]
 
 #check original column names
-kable(st1, align = "c", row.names = FALSE)
+knitr::kable(st1, align = "c", row.names = F, escape = FALSE) %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
+
 ```
 
 
@@ -371,7 +396,9 @@ relabel_colms(st1)
 rc <- relabel_colms(st1)
 
 #check original column names
-kable(rc, align = "c", row.names = FALSE)
+knitr::kable(rc, align = "c", row.names = F, escape = FALSE) %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
+
 ```
  &nbsp; 
 
@@ -391,7 +418,9 @@ relabel_colms(st1, extra.cols.name = c("selec.file", "View"),
 rc <- relabel_colms(st1, extra.cols.name = c("selec.file", "View"),
  c("Raven selection file", "Raven view"))
 
-kable(rc, align = "c", row.names = F)
+knitr::kable(rc, align = "c", row.names = F, escape = FALSE) %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
+
 ```
  &nbsp; 
 
@@ -420,7 +449,7 @@ list.files(path = file.path(tempdir(), "cuts"))
 ```
  &nbsp; 
  
-Every selection is in its own sound file (labeled as `paste(sound.files, selec)`). Now open [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) and run the batch correlator on the 'cuts' folder as follows:
+Every selection is in its own sound file (labeled as `paste("rownames", "sound.files", "selec")`). Now open [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) and run the batch correlator on the 'cuts' folder as follows:
 
 ![gif1](https://raw.githubusercontent.com/maRce10/Rraven/master/gifs/opt2_short_raven_correlator.gif)
  &nbsp; 
@@ -447,18 +476,36 @@ xcorr.rav <- imp_corr_mat(file = "BatchCorrOutput.txt", path = tempdir())
  
 The function returns a list containing the correlation matrix (here only showing the first 5 rows/columns):
 
-```{r, eval=T}
+```{r, eval=F}
 xcorr.rav$correlation[1:5, 1:5]
 ```
- &nbsp; 
+&nbsp; 
+ 
+```{r, eval=T, echo=F}
+
+knitr::kable(xcorr.rav$correlation[1:5, 1:5], align = "c", row.names = T, escape = FALSE) %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = T, font_size = 12) %>%
+  row_spec(0, angle = 0)
+
+```
+&nbsp; 
  
 and the time lag matrix:
 
-```{r, eval=T}
+```{r, eval=F}
 xcorr.rav$`lag (s)`[1:5, 1:5]
 
 ```
- &nbsp; 
+&nbsp; 
+ 
+```{r, eval=T, echo=F}
+
+knitr::kable(xcorr.rav$`lag (s)`[1:5, 1:5], align = "c", row.names = T, escape = FALSE) %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = T, font_size = 12) %>%
+  row_spec(0, angle = 0)
+
+```
+&nbsp; 
  
 This output is ready for stats. For instance, the following code runs a mantel test between cross-correlation (converted to distances) and [warbleR](https://cran.r-project.org/package=warbleR) spectral parameter pairwise dissimilarities:
 
@@ -582,7 +629,7 @@ sound.files = "BlackCappedVireo.aif", path = file.path(raven.path, "Examples"))
 
 Please report any bugs [here](https://github.com/maRce10/Rraven/issues). The `Rraven` package should be cited as follows: 
 
-Araya-Salas. (2017), *Rraven: connecting R and Raven bioacoustic software*. R package version 1.0.0.
+Araya-Salas, M. (2017), *Rraven: connecting R and Raven bioacoustic software*. R package version 1.0.0.
 
 ```{r, eval=T, echo=F}
 
