--- a/vignettes/Rraven.Rmd
+++ b/vignettes/Rraven.Rmd
@@ -18,11 +18,16 @@ vignette: >
 
 ```{r, echo = FALSE, message = FALSE}
 
+# remove all objects
+rm(list = ls())
+
+# unload all non-based packages
+out <- sapply(paste('package:', names(sessionInfo()$otherPkgs), sep = ""), function(x) try(detach(x, unload = FALSE, character.only = TRUE), silent = T))
+
 #load packages
 library(warbleR)
 library(Rraven)
 library(knitr)
-library(dplyr)
 library(kableExtra)
 
 options(knitr.table.format = "html") 
@@ -93,6 +98,8 @@ getwd()
 
 ```{r eval= T, echo=F}
 
+setwd(tempdir())
+
 #load example data
 data(list = c("Phae.long1", "Phae.long2", "Phae.long3", "Phae.long4", "selec.table", "selection_files"))
 
@@ -110,7 +117,7 @@ writeLines(selection_files[[x]], con = names(selection_files)[x]))
 # rvn.dat <- imp_raven(sound.file.col = "Begin.File", all.data = FALSE)
 
 #this is the temporary directory location (of course different each time is run)
-getwd() 
+# getwd() 
 
 ```
  &nbsp; 
@@ -147,30 +154,21 @@ head(rvn.dat)
  #providing the name of the column with the sound file names
 rvn.dat <- imp_raven(all.data = TRUE, path = tempdir())
 
-knitr::kable(head(rvn.dat[,1:7]), align = "c", row.names = F, escape = FALSE) %>%
-  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
+kbl <- kable(head(rvn.dat), align = "c", row.names = F, escape = FALSE) 
 
-knitr::kable(head(rvn.dat[ , 8:ncol(rvn.dat)]), align = "c", row.names = F, escape = FALSE) %>%
-  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
+kbl <- kable_styling(kbl, bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 11)
+
+scroll_box(kbl, width = "808px",
+box_css = "border: 1px solid #ddd; padding: 5px; ", extra_css = NULL)
+
 ```
  &nbsp; 
  
-Note that the 'waveform' view data has been removed. It can also be imported as follows: 
+Note that the 'waveform' view data has been removed. It can also be imported as follows (but note that the example selection tables have no waveform data): 
 
 ```{r, eval=FALSE}
 
 rvn.dat <- imp_raven(all.data = TRUE, waveform = TRUE)
-
-head(rvn.dat)
-
-```
-
-```{r, eval = TRUE, echo = FALSE, message = FALSE, warning = FALSE, cache.comments=FALSE, comment=F, include=F}
-
-rvn.dat <- imp_raven(all.data = TRUE, path = tempdir(), waveform = TRUE)
-
-knitr::kable(head(rvn.dat), align = "c", row.names = F, escape = FALSE) %>%
-  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
 
 ```
  &nbsp; 
@@ -190,8 +188,12 @@ head(rvn.dat)
  #providing the name of the column with the sound file names
 rvn.dat <- imp_raven(sound.file.col = "Begin.File", all.data = FALSE, freq.cols = TRUE)
 
-knitr::kable(head(rvn.dat), align = "c", row.names = F, escape = FALSE) %>%
-  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
+kbl <- kable(head(rvn.dat), align = "c", row.names = F, escape = FALSE)
+
+kable_styling(kbl, bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = TRUE, font_size = 12)
+
+# scroll_box(kbl, width = "808",
+# box_css = "border: 1px solid #ddd; padding: 5px; ", extra_css = NULL)
 ```
  &nbsp; 
  
@@ -215,11 +217,13 @@ rvn.dat.st <- make.selection.table(rvn.dat)
 
 sp <- specan(X = rvn.dat, bp = "frange", wl = 150, pb = FALSE, ovlp = 90)
 
-knitr::kable(head(sp[ , 1:8]), align = "c", row.names = F, escape = FALSE) %>%
-  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
+kbl <- kable(head(sp), align = "c", row.names = F, escape = FALSE)
 
-knitr::kable(head(sp[ , 9:15]), align = "c", row.names = F, escape = FALSE) %>%
-  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
+kbl <- kable_styling(kbl, bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 11)
+
+scroll_box(kbl, width = "808px",
+box_css = "border: 1px solid #ddd; padding: 5px; ", extra_css = NULL)
+
 
 ```
  &nbsp; 
@@ -238,7 +242,7 @@ catalog(X = rvn.dat.st[1:9, ], flim = c(1, 10), nrow = 3, ncol = 3, same.time.sc
 ![catalog](Catalog.jpeg)
 ---
 
-This is just to cite a few analysis that can be implemented in [warbleR](https://cran.r-project.org/package=warbleR).
+This is just to mention a few analysis that can be implemented in [warbleR](https://cran.r-project.org/package=warbleR).
 
 `Rraven` also contains the function `imp_syrinx` to import selections from [Syrinx sound analyis software](www.syrinxpc.com) (although this program is not been maintained any longer).
 
@@ -261,8 +265,7 @@ rvn.dat <- imp_raven(all.data = TRUE)
 # Peak freq contour dif length
 fcts <- extract_ts(X = rvn.dat, ts.column = "Peak Freq Contour (Hz)")
  
-head(fcts[,1:14])
-head(fcts[,39:53])
+head(fcts)
 
 ```
 
@@ -280,12 +283,12 @@ rvn.dat <- imp_raven(all.data = TRUE)
 # Peak freq contour dif length
 fcts <- extract_ts(X = rvn.dat, ts.column = "Peak Freq Contour (Hz)")
  
-knitr::kable(head(fcts[ , 1:14]), align = "c", row.names = F, escape = FALSE) %>%
-  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
+kbl <- kable(head(fcts), align = "c", row.names = F, escape = FALSE)
 
-knitr::kable(head(fcts[ , 39:53]), align = "c", row.names = F, escape = FALSE) %>%
-  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
+kbl <- kable_styling(kbl, bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 11)
 
+scroll_box(kbl, width = "808px",
+box_css = "border: 1px solid #ddd; padding: 5px; ", extra_css = NULL)
 ```
  &nbsp;
  
@@ -298,7 +301,7 @@ Note that these sequences are not all of equal length (one has NAs at the end).
 fcts <- extract_ts(X = rvn.dat, ts.column = "Peak Freq Contour (Hz)",  equal.length = TRUE)
 
 #look at the last rows wit no NAs
-head(fcts[,21:32])
+head(fcts)
 
 ```
  
@@ -308,8 +311,12 @@ head(fcts[,21:32])
 fcts <- extract_ts(X = rvn.dat, ts.column = "Peak Freq Contour (Hz)",
  equal.length = TRUE)
 
-knitr::kable(head(fcts[ , 21:32]), align = "c", row.names = F, escape = FALSE) %>%
-  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
+kbl <- kable(head(fcts), align = "c", row.names = F, escape = FALSE)
+
+kbl <- kable_styling(kbl, bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 11)
+
+scroll_box(kbl, width = "808px",
+box_css = "border: 1px solid #ddd; padding: 5px; ", extra_css = NULL)
  
 ```
  &nbsp; 
@@ -322,8 +329,7 @@ And the length of the series can also be specified:
 fcts <- extract_ts(X = rvn.dat, ts.column = "Peak Freq Contour (Hz)",
 equal.length = T, length.out = 10)  
 
-knitr::kable(head(fcts), align = "c", row.names = FALSE)
-
+head(fcts)
 
 ```
 
@@ -333,8 +339,12 @@ knitr::kable(head(fcts), align = "c", row.names = FALSE)
 fcts <- extract_ts(X = rvn.dat, ts.column = "Peak Freq Contour (Hz)", 
 equal.length = T, length.out = 10)  
 
-knitr::kable(head(fcts), align = "c", row.names = F, escape = FALSE) %>%
-  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
+kbl <- kable(head(fcts), align = "c", row.names = F, escape = FALSE)
+
+kable_styling(kbl, bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
+
+# scroll_box(kbl, width = "900px",
+# box_css = "border: 1px solid #ddd; padding: 5px; ", extra_css = NULL)
 
 ```
  &nbsp; 
@@ -350,20 +360,22 @@ dfDTW(ts.df = fcts)
 
 ```{r, eval=T, echo=F}
 
-knitr::kable(dfDTW(ts.df = fcts)[1:6, 1:6], align = "c", row.names = T, escape = FALSE) %>%
-  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = T, font_size = 12) %>%
-  row_spec(0, angle = 0)
+kbl <- kable(dfDTW(ts.df = fcts), align = "c", row.names = T, escape = FALSE)
 
+kbl <- kable_styling(kbl, bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = T, font_size = 12)
 
+# row_spec(0, angle = 0)
+
+scroll_box(kbl, height = "500px", width = "808px",
+box_css = "border: 1px solid #ddd; padding: 5px; ", extra_css = NULL)
 
 ```
-<font size="2"><i>* Rows/columns 7 to 11 not shown</i></font>
 
 ---
 
 ### *relabel_colms*
 
-This is a very simple function to relabel columns so they match the selection table format used in [warbleR](https://cran.r-project.org/package=warbleR):
+This is a simple function to relabel columns so they match the selection table format used in [warbleR](https://cran.r-project.org/package=warbleR):
 
 ```{r, eval = F, echo = T}
 
@@ -380,8 +392,9 @@ st1
 st1 <- rvn.dat[ ,1:7]
 
 #check original column names
-knitr::kable(st1, align = "c", row.names = F, escape = FALSE) %>%
-  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
+kbl <- kable(st1, align = "c", row.names = F, escape = FALSE) 
+
+kbl <- kable_styling(kbl, bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
 
 ```
 
@@ -396,8 +409,9 @@ relabel_colms(st1)
 rc <- relabel_colms(st1)
 
 #check original column names
-knitr::kable(rc, align = "c", row.names = F, escape = FALSE) %>%
-  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
+kbl <- kable(rc, align = "c", row.names = F, escape = FALSE) 
+
+kbl <- kable_styling(kbl, bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
 
 ```
  &nbsp; 
@@ -406,20 +420,20 @@ Additional columns can also be relabeled:
 ```{r, eval = F, echo = T}
 
 # 2 additional column 
-relabel_colms(st1, extra.cols.name = c("selec.file", "View"),
-              extra.cols.new.name = c("Raven selection file", "Raven view"))
-
+relabel_colms(st1, extra.cols.name = "View",
+              extra.cols.new.name = "Raven view")
 
 ```
 
 ```{r, eval = T, echo = F}
 
 # plus 2 additional column 
-rc <- relabel_colms(st1, extra.cols.name = c("selec.file", "View"),
- c("Raven selection file", "Raven view"))
+rc <- relabel_colms(st1, extra.cols.name = "View",
+ "Raven view")
 
-knitr::kable(rc, align = "c", row.names = F, escape = FALSE) %>%
-  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
+kbl <- kable(rc, align = "c", row.names = F, escape = FALSE) 
+
+kable_styling(kbl, bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = FALSE, font_size = 14)
 
 ```
  &nbsp; 
@@ -474,18 +488,25 @@ xcorr.rav <- imp_corr_mat(file = "BatchCorrOutput.txt", path = tempdir())
 ```
  &nbsp; 
  
-The function returns a list containing the correlation matrix (here only showing the first 5 rows/columns):
+The function returns a list containing the correlation matrix:
 
 ```{r, eval=F}
-xcorr.rav$correlation[1:5, 1:5]
+
+xcorr.rav$correlation
+
 ```
 &nbsp; 
  
 ```{r, eval=T, echo=F}
 
-knitr::kable(xcorr.rav$correlation[1:5, 1:5], align = "c", row.names = T, escape = FALSE) %>%
-  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = T, font_size = 12) %>%
-  row_spec(0, angle = 0)
+kbl <- kable(xcorr.rav$correlation, align = "c", row.names = T, escape = FALSE)
+
+kbl <- kable_styling(kbl, bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = T, font_size = 12)
+
+# row_spec(0, angle = 0)
+
+scroll_box(kbl, height = "500px", width = "808px",
+box_css = "border: 1px solid #ddd; padding: 5px; ", extra_css = NULL)
 
 ```
 &nbsp; 
@@ -493,16 +514,19 @@ knitr::kable(xcorr.rav$correlation[1:5, 1:5], align = "c", row.names = T, escape
 and the time lag matrix:
 
 ```{r, eval=F}
-xcorr.rav$`lag (s)`[1:5, 1:5]
+xcorr.rav$`lag (s)`
 
 ```
 &nbsp; 
  
 ```{r, eval=T, echo=F}
 
-knitr::kable(xcorr.rav$`lag (s)`[1:5, 1:5], align = "c", row.names = T, escape = FALSE) %>%
-  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = T, font_size = 12) %>%
-  row_spec(0, angle = 0)
+kbl <- kable(xcorr.rav$`lag (s)`, align = "c", row.names = T, escape = FALSE)
+
+kbl <- kable_styling(kbl, bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = T, font_size = 12)
+
+scroll_box(kbl, height = "500px", width = "808px",
+box_css = "border: 1px solid #ddd; padding: 5px; ", extra_css = NULL)  
 
 ```
 &nbsp; 
@@ -637,3 +661,13 @@ unlink(list.files(pattern = "\\.wav$|\\.txt$", ignore.case = TRUE))
 
 ```
 
+
+---
+
+<font size="4">Session information</font>
+
+```{r session info, echo=F}
+
+sessionInfo()
+
+```
